Update the All.tex with statistics

--- a/All.bib
+++ b/All.bib
@@ -6,7 +6,7 @@
 % Emails: chenle02 AT gmail.com
 %         le.chen AT auburn.edu
 % Github: https://github.com/chenle02/SPDEs-Bib.git
-% Commit: 548339cf87b8da87d96a756a1d5bf4601f70b93b
+% Commit: 8a3a0125fc12ccbe2a0b305c051baa4e1c28c0c4
 % Date: 2023-11-13
 % ---------------------------
 
@@ -3143,22 +3143,6 @@
 }
 @article{balan.tudor:10:stochastic,
   author        = {Balan, Raluca M. and Tudor, Ciprian A.},
-  title         = {The stochastic wave equation with fractional noise: a random field approach},
-  journal       = {Stochastic Process. Appl.},
-  fjournal      = {Stochastic Processes and their Applications},
-  volume        = {120},
-  year          = {2010},
-  number        = {12},
-  pages         = {2468--2494},
-  issn          = {0304-4149},
-  mrclass       = {60H15 (60G60 60H05)},
-  mrnumber      = {2728174},
-  mrreviewer    = {Llu\'{i}s Quer-Sardanyons},
-  doi           = {10.1016/j.spa.2010.08.006},
-  url           = {https://doi.org/10.1016/j.spa.2010.08.006}
-}
-@article{balan.tudor:10:stochastic*1,
-  author        = {Balan, Raluca M. and Tudor, Ciprian A.},
   title         = {Stochastic heat equation with multiplicative fractional-colored noise},
   journal       = {J. Theoret. Probab.},
   fjournal      = {Journal of Theoretical Probability},
@@ -3172,6 +3156,22 @@
   mrreviewer    = {David Nualart},
   doi           = {10.1007/s10959-009-0237-3},
   url           = {https://doi.org/10.1007/s10959-009-0237-3}
+}
+@article{balan.tudor:10:stochastic*1,
+  author        = {Balan, Raluca M. and Tudor, Ciprian A.},
+  title         = {The stochastic wave equation with fractional noise: a random field approach},
+  journal       = {Stochastic Process. Appl.},
+  fjournal      = {Stochastic Processes and their Applications},
+  volume        = {120},
+  year          = {2010},
+  number        = {12},
+  pages         = {2468--2494},
+  issn          = {0304-4149},
+  mrclass       = {60H15 (60G60 60H05)},
+  mrnumber      = {2728174},
+  mrreviewer    = {Llu\'{i}s Quer-Sardanyons},
+  doi           = {10.1016/j.spa.2010.08.006},
+  url           = {https://doi.org/10.1016/j.spa.2010.08.006}
 }
 @article{balan.yuan:22:spatial,
   author        = {Balan, Raluca M. and Yuan, Wangjun},
@@ -10610,7 +10610,7 @@
 }
 @article{bourgain.pisier:83:construction,
   author        = {Bourgain, Jean and Pisier, Gilles},
-  title         = {A construction of {${\scr L}\sb{infty }$}-spaces and related {B}anach spaces},
+  title         = {A construction of {$\mathscr{L}_{infty}$}-spaces and related {B}anach spaces},
   journal       = {Bol. Soc. Brasil. Mat.},
   fjournal      = {Boletim da Sociedade Brasileira de Matem\'{a}tica},
   volume        = {14},
@@ -11384,18 +11384,6 @@
 }
 @incollection{bourgain:02:on*1,
   author        = {Bourgain, J.},
-  title         = {On the distribution of {D}irichlet sums. {II}},
-  booktitle     = {Number theory for the millennium, {I} ({U}rbana, {IL}, 2000)},
-  pages         = {87--109},
-  publisher     = {A K Peters, Natick, MA},
-  year          = {2002},
-  isbn          = {1-56881-126-8},
-  mrclass       = {11M26},
-  mrnumber      = {1956220},
-  mrreviewer    = {Jerzy\ Kaczorowski}
-}
-@incollection{bourgain:02:on*2,
-  author        = {Bourgain, J.},
   title         = {On the spectrum of lattice {S}chr\"{o}dinger operators with deterministic potential},
   note          = {Dedicated to the memory of Thomas H. Wolff},
   journal       = {J. Anal. Math.},
@@ -11409,6 +11397,18 @@
   mrreviewer    = {David\ Damanik},
   doi           = {10.1007/BF02868469},
   url           = {https://doi.org/10.1007/BF02868469}
+}
+@incollection{bourgain:02:on*2,
+  author        = {Bourgain, J.},
+  title         = {On the distribution of {D}irichlet sums. {II}},
+  booktitle     = {Number theory for the millennium, {I} ({U}rbana, {IL}, 2000)},
+  pages         = {87--109},
+  publisher     = {A K Peters, Natick, MA},
+  year          = {2002},
+  isbn          = {1-56881-126-8},
+  mrclass       = {11M26},
+  mrnumber      = {1956220},
+  mrreviewer    = {Jerzy\ Kaczorowski}
 }
 @article{bourgain:02:on*3,
   author        = {Bourgain, Jean},
@@ -11474,23 +11474,7 @@
   doi           = {10.1007/978-3-540-36428-3\_8},
   url           = {https://doi.org/10.1007/978-3-540-36428-3\_8}
 }
-@incollection{bourgain:03:on*1,
-  author        = {Bourgain, J.},
-  title         = {On the isotropy-constant problem for ``{PSI}-2''-bodies},
-  booktitle     = {Geometric aspects of functional analysis},
-  series        = {Lecture Notes in Math.},
-  volume        = {1807},
-  pages         = {114--121},
-  publisher     = {Springer, Berlin},
-  year          = {2003},
-  isbn          = {3-540-00485-8},
-  mrclass       = {46B07 (46B20 52A20 60G15)},
-  mrnumber      = {2083391},
-  mrreviewer    = {Apostolos\ A.\ Giannopoulos},
-  doi           = {10.1007/978-3-540-36428-3\_9},
-  url           = {https://doi.org/10.1007/978-3-540-36428-3\_9}
-}
-@article{bourgain:03:on*2,
+@article{bourgain:03:on*1,
   author        = {Bourgain, J.},
   title         = {On the {E}rd\H{o}s-{V}olkmann and {K}atz-{T}ao ring conjectures},
   journal       = {Geom. Funct. Anal.},
@@ -11505,6 +11489,22 @@
   mrreviewer    = {Ben\ Joseph\ Green},
   doi           = {10.1007/s000390300008},
   url           = {https://doi.org/10.1007/s000390300008}
+}
+@incollection{bourgain:03:on*2,
+  author        = {Bourgain, J.},
+  title         = {On the isotropy-constant problem for ``{PSI}-2''-bodies},
+  booktitle     = {Geometric aspects of functional analysis},
+  series        = {Lecture Notes in Math.},
+  volume        = {1807},
+  pages         = {114--121},
+  publisher     = {Springer, Berlin},
+  year          = {2003},
+  isbn          = {3-540-00485-8},
+  mrclass       = {46B07 (46B20 52A20 60G15)},
+  mrnumber      = {2083391},
+  mrreviewer    = {Apostolos\ A.\ Giannopoulos},
+  doi           = {10.1007/978-3-540-36428-3\_9},
+  url           = {https://doi.org/10.1007/978-3-540-36428-3\_9}
 }
 @incollection{bourgain:03:random,
   author        = {Bourgain, J.},
@@ -11555,22 +11555,6 @@
   url           = {https://doi.org/10.1016/j.crma.2004.03.027}
 }
 @incollection{bourgain:04:on,
-  author        = {Bourgain, Jean},
-  title         = {On quasi-periodic lattice {S}chr\"{o}dinger operators},
-  note          = {Partial differential equations and applications},
-  journal       = {Discrete Contin. Dyn. Syst.},
-  fjournal      = {Discrete and Continuous Dynamical Systems. Series A},
-  volume        = {10},
-  year          = {2004},
-  number        = {1-2},
-  pages         = {75--88},
-  issn          = {1078-0947,1553-5231},
-  mrclass       = {47B80 (35P20 35Q40 37J40 37K55 81Q10)},
-  mrnumber      = {2026184},
-  doi           = {10.3934/dcds.2004.10.75},
-  url           = {https://doi.org/10.3934/dcds.2004.10.75}
-}
-@incollection{bourgain:04:on*1,
   author        = {Bourgain, J.},
   title         = {On localization for lattice {S}chr\"{o}dinger operators involving {B}ernoulli variables},
   booktitle     = {Geometric aspects of functional analysis},
@@ -11585,6 +11569,22 @@
   mrreviewer    = {David\ Damanik},
   doi           = {10.1007/978-3-540-44489-3\_9},
   url           = {https://doi.org/10.1007/978-3-540-44489-3\_9}
+}
+@incollection{bourgain:04:on*1,
+  author        = {Bourgain, Jean},
+  title         = {On quasi-periodic lattice {S}chr\"{o}dinger operators},
+  note          = {Partial differential equations and applications},
+  journal       = {Discrete Contin. Dyn. Syst.},
+  fjournal      = {Discrete and Continuous Dynamical Systems. Series A},
+  volume        = {10},
+  year          = {2004},
+  number        = {1-2},
+  pages         = {75--88},
+  issn          = {1078-0947,1553-5231},
+  mrclass       = {47B80 (35P20 35Q40 37J40 37K55 81Q10)},
+  mrnumber      = {2026184},
+  doi           = {10.3934/dcds.2004.10.75},
+  url           = {https://doi.org/10.3934/dcds.2004.10.75}
 }
 @article{bourgain:04:remark,
   author        = {Bourgain, Jean},
@@ -12464,23 +12464,7 @@
   mrnumber      = {3329846},
   mrreviewer    = {Brett\ D.\ Wick}
 }
-@incollection{bourgain:14:on*1,
-  author        = {Bourgain, Jean},
-  title         = {On eigenvalue spacings for the 1-{D} {A}nderson model with singular site distribution},
-  booktitle     = {Geometric aspects of functional analysis},
-  series        = {Lecture Notes in Math.},
-  volume        = {2116},
-  pages         = {71--83},
-  publisher     = {Springer, Cham},
-  year          = {2014},
-  isbn          = {978-3-319-09476-2; 978-3-319-09477-9},
-  mrclass       = {35P15 (35J10 35P05 47B39 81Q12 82B20 82B44)},
-  mrnumber      = {3364680},
-  mrreviewer    = {Michael\ A.\ Perelmuter},
-  doi           = {10.1007/978-3-319-09477-9\_6},
-  url           = {https://doi.org/10.1007/978-3-319-09477-9\_6}
-}
-@article{bourgain:14:on*2,
+@article{bourgain:14:on*1,
   author        = {Bourgain, Jean},
   title         = {On the {H}ardy-{L}ittlewood maximal function for the cube},
   journal       = {Israel J. Math.},
@@ -12495,6 +12479,22 @@
   mrreviewer    = {Javier\ P\'{e}rez L\'{a}zaro},
   doi           = {10.1007/s11856-014-1059-2},
   url           = {https://doi.org/10.1007/s11856-014-1059-2}
+}
+@incollection{bourgain:14:on*2,
+  author        = {Bourgain, Jean},
+  title         = {On eigenvalue spacings for the 1-{D} {A}nderson model with singular site distribution},
+  booktitle     = {Geometric aspects of functional analysis},
+  series        = {Lecture Notes in Math.},
+  volume        = {2116},
+  pages         = {71--83},
+  publisher     = {Springer, Cham},
+  year          = {2014},
+  isbn          = {978-3-319-09476-2; 978-3-319-09477-9},
+  mrclass       = {35P15 (35J10 35P05 47B39 81Q12 82B20 82B44)},
+  mrnumber      = {3364680},
+  mrreviewer    = {Michael\ A.\ Perelmuter},
+  doi           = {10.1007/978-3-319-09477-9\_6},
+  url           = {https://doi.org/10.1007/978-3-319-09477-9\_6}
 }
 @incollection{bourgain:14:on*3,
   author        = {Bourgain, Jean},
@@ -13229,7 +13229,7 @@
 }
 @article{bourgain:80:result,
   author        = {Bourgain, J.},
-  title         = {A result on operators on {$\scr C[0,1]$}},
+  title         = {A result on operators on {$\mathscr{C}[0,1]$}},
   journal       = {J. Operator Theory},
   fjournal      = {Journal of Operator Theory},
   volume        = {3},
@@ -13862,7 +13862,19 @@
   doi           = {10.1007/BF02392189},
   url           = {https://doi.org/10.1007/BF02392189}
 }
-@article{bourgain:84:on,
+@inproceedings{bourgain:84:on,
+  author        = {Bourgain, J.},
+  title         = {On nonisomorphisms of algebras of analytic functions},
+  booktitle     = {Proceedings of the second international conference on operator algebras, ideals, and their applications in theoretical physics ({L}eipzig, 1983)},
+  series        = {Teubner-Texte Math.},
+  volume        = {67},
+  pages         = {145--154},
+  publisher     = {Teubner, Leipzig},
+  year          = {1984},
+  mrclass       = {46J15 (32E25)},
+  mrnumber      = {763536}
+}
+@article{bourgain:84:on*1,
   author        = {Bourgain, J.},
   title         = {On bases in the disc algebra},
   journal       = {Trans. Amer. Math. Soc.},
@@ -13878,7 +13890,7 @@
   doi           = {10.2307/1999476},
   url           = {https://doi.org/10.2307/1999476}
 }
-@article{bourgain:84:on*1,
+@article{bourgain:84:on*2,
   author        = {Bourgain, J.},
   title         = {On martingales transforms in finite-dimensional lattices with an appendix on the {$K$}-convexity constant},
   journal       = {Math. Nachr.},
@@ -13892,18 +13904,6 @@
   mrreviewer    = {D.\ L.\ Burkholder},
   doi           = {10.1002/mana.19841190104},
   url           = {https://doi.org/10.1002/mana.19841190104}
-}
-@inproceedings{bourgain:84:on*2,
-  author        = {Bourgain, J.},
-  title         = {On nonisomorphisms of algebras of analytic functions},
-  booktitle     = {Proceedings of the second international conference on operator algebras, ideals, and their applications in theoretical physics ({L}eipzig, 1983)},
-  series        = {Teubner-Texte Math.},
-  volume        = {67},
-  pages         = {145--154},
-  publisher     = {Teubner, Leipzig},
-  year          = {1984},
-  mrclass       = {46J15 (32E25)},
-  mrnumber      = {763536}
 }
 @incollection{bourgain:84:propriete,
   author        = {Bourgain, Jean},
@@ -14018,20 +14018,6 @@
   mrnumber      = {832256}
 }
 @article{bourgain:85:on*1,
-  author        = {Bourgain, J.},
-  title         = {On square functions on the trigonometric system},
-  journal       = {Bull. Soc. Math. Belg. S\'{e}r. B},
-  fjournal      = {Bulletin de la Soci\'{e}t\'{e} Math\'{e}matique de Belgique. S\'{e}rie B},
-  volume        = {37},
-  year          = {1985},
-  number        = {1},
-  pages         = {20--26},
-  issn          = {0037-9476},
-  mrclass       = {42A50 (42A45)},
-  mrnumber      = {847119},
-  mrreviewer    = {Jos\'{e}\ L.\ Rubio de Francia}
-}
-@article{bourgain:85:on*2,
   author        = {Bourgain, Jean},
   title         = {On finitely generated closed ideals in {$H^infty(D)$}},
   journal       = {Ann. Inst. Fourier (Grenoble)},
@@ -14045,6 +14031,20 @@
   mrnumber      = {812323},
   mrreviewer    = {Richard\ Rochberg},
   url           = {http://www.numdam.org/item?id=AIF\_1985\_\_35\_4\_163\_0}
+}
+@article{bourgain:85:on*2,
+  author        = {Bourgain, J.},
+  title         = {On square functions on the trigonometric system},
+  journal       = {Bull. Soc. Math. Belg. S\'{e}r. B},
+  fjournal      = {Bulletin de la Soci\'{e}t\'{e} Math\'{e}matique de Belgique. S\'{e}rie B},
+  volume        = {37},
+  year          = {1985},
+  number        = {1},
+  pages         = {20--26},
+  issn          = {0037-9476},
+  mrclass       = {42A50 (42A45)},
+  mrnumber      = {847119},
+  mrreviewer    = {Jos\'{e}\ L.\ Rubio de Francia}
 }
 @article{bourgain:85:on*3,
   author        = {Bourgain, J.},
@@ -14171,22 +14171,6 @@
 }
 @article{bourgain:86:on*1,
   author        = {Bourgain, J.},
-  title         = {On the {$L^p$}-bounds for maximal functions associated to convex bodies in {${\bf R}^n$}},
-  journal       = {Israel J. Math.},
-  fjournal      = {Israel Journal of Mathematics},
-  volume        = {54},
-  year          = {1986},
-  number        = {3},
-  pages         = {257--265},
-  issn          = {0021-2172},
-  mrclass       = {42B25},
-  mrnumber      = {853451},
-  mrreviewer    = {Roger\ L.\ Jones},
-  doi           = {10.1007/BF02764955},
-  url           = {https://doi.org/10.1007/BF02764955}
-}
-@article{bourgain:86:on*2,
-  author        = {Bourgain, J.},
   title         = {On the similarity problem for polynomially bounded operators on {H}ilbert space},
   journal       = {Israel J. Math.},
   fjournal      = {Israel Journal of Mathematics},
@@ -14200,6 +14184,22 @@
   mrreviewer    = {Vern\ Paulsen},
   doi           = {10.1007/BF02764943},
   url           = {https://doi.org/10.1007/BF02764943}
+}
+@article{bourgain:86:on*2,
+  author        = {Bourgain, J.},
+  title         = {On the {$L^p$}-bounds for maximal functions associated to convex bodies in {${\bf R}^n$}},
+  journal       = {Israel J. Math.},
+  fjournal      = {Israel Journal of Mathematics},
+  volume        = {54},
+  year          = {1986},
+  number        = {3},
+  pages         = {257--265},
+  issn          = {0021-2172},
+  mrclass       = {42B25},
+  mrnumber      = {853451},
+  mrreviewer    = {Roger\ L.\ Jones},
+  doi           = {10.1007/BF02764955},
+  url           = {https://doi.org/10.1007/BF02764955}
 }
 @article{bourgain:86:on*3,
   author        = {Bourgain, J.},
@@ -14510,7 +14510,23 @@
   doi           = {10.1007/BF02796120},
   url           = {https://doi.org/10.1007/BF02796120}
 }
-@article{bourgain:88:on,
+@incollection{bourgain:88:on,
+  author        = {Bourgain, J.},
+  title         = {On finite-dimensional homogeneous {B}anach spaces},
+  booktitle     = {Geometric aspects of functional analysis (1986/87)},
+  series        = {Lecture Notes in Math.},
+  volume        = {1317},
+  pages         = {232--238},
+  publisher     = {Springer, Berlin},
+  year          = {1988},
+  isbn          = {3-540-19353-7},
+  mrclass       = {46B20},
+  mrnumber      = {950984},
+  mrreviewer    = {T.\ Figiel},
+  doi           = {10.1007/BFb0081744},
+  url           = {https://doi.org/10.1007/BFb0081744}
+}
+@article{bourgain:88:on*1,
   author        = {Bourgain, J.},
   title         = {On the pointwise ergodic theorem on {$L^p$} for arithmetic sets},
   journal       = {Israel J. Math.},
@@ -14526,7 +14542,7 @@
   doi           = {10.1007/BF02776302},
   url           = {https://doi.org/10.1007/BF02776302}
 }
-@article{bourgain:88:on*1,
+@article{bourgain:88:on*2,
   author        = {Bourgain, J.},
   title         = {On the maximal ergodic theorem for certain subsets of the integers},
   journal       = {Israel J. Math.},
@@ -14541,22 +14557,6 @@
   mrreviewer    = {Alberto\ de la Torre},
   doi           = {10.1007/BF02776301},
   url           = {https://doi.org/10.1007/BF02776301}
-}
-@incollection{bourgain:88:on*2,
-  author        = {Bourgain, J.},
-  title         = {On finite-dimensional homogeneous {B}anach spaces},
-  booktitle     = {Geometric aspects of functional analysis (1986/87)},
-  series        = {Lecture Notes in Math.},
-  volume        = {1317},
-  pages         = {232--238},
-  publisher     = {Springer, Berlin},
-  year          = {1988},
-  isbn          = {3-540-19353-7},
-  mrclass       = {46B20},
-  mrnumber      = {950984},
-  mrreviewer    = {T.\ Figiel},
-  doi           = {10.1007/BFb0081744},
-  url           = {https://doi.org/10.1007/BFb0081744}
 }
 @article{bourgain:88:remark,
   author        = {Bourgain, J.},
@@ -25196,21 +25196,6 @@
 }
 @article{david.duplantier.ea:93:renormalization,
   author        = {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter, Emmanuel},
-  title         = {Renormalization theory for interacting crumpled manifolds},
-  journal       = {Nuclear Phys. B},
-  fjournal      = {Nuclear Physics. B. Theoretical, Phenomenological, and Experimental High Energy Physics. Quantum Field Theory and Statistical Systems},
-  volume        = {394},
-  year          = {1993},
-  number        = {3},
-  pages         = {555--664},
-  issn          = {0550-3213},
-  mrclass       = {82B28 (81T17 81T30 82D60)},
-  mrnumber      = {1215176},
-  doi           = {10.1016/0550-3213(93)90226-F},
-  url           = {https://doi.org/10.1016/0550-3213(93)90226-F}
-}
-@article{david.duplantier.ea:93:renormalization*1,
-  author        = {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter, Emmanuel},
   title         = {Renormalization of crumpled manifolds},
   journal       = {Phys. Rev. Lett.},
   fjournal      = {Physical Review Letters},
@@ -25223,6 +25208,21 @@
   mrnumber      = {1214561},
   doi           = {10.1103/PhysRevLett.70.2205},
   url           = {https://doi.org/10.1103/PhysRevLett.70.2205}
+}
+@article{david.duplantier.ea:93:renormalization*1,
+  author        = {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter, Emmanuel},
+  title         = {Renormalization theory for interacting crumpled manifolds},
+  journal       = {Nuclear Phys. B},
+  fjournal      = {Nuclear Physics. B. Theoretical, Phenomenological, and Experimental High Energy Physics. Quantum Field Theory and Statistical Systems},
+  volume        = {394},
+  year          = {1993},
+  number        = {3},
+  pages         = {555--664},
+  issn          = {0550-3213},
+  mrclass       = {82B28 (81T17 81T30 82D60)},
+  mrnumber      = {1215176},
+  doi           = {10.1016/0550-3213(93)90226-F},
+  url           = {https://doi.org/10.1016/0550-3213(93)90226-F}
 }
 @article{david.duplantier.ea:94:renormalization,
   author        = {David, Fran\c{c}ois and Duplantier, Bertrand and Guitter, Emmanuel},
@@ -25386,6 +25386,21 @@
 }
 @article{dawson.etheridge.ea:02:mutually,
   author        = {Dawson, Donald A. and Etheridge, Alison M. and Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A. and Xiong, Jie},
+  title         = {Mutually catalytic branching in the plane: infinite measure states},
+  journal       = {Electron. J. Probab.},
+  fjournal      = {Electronic Journal of Probability},
+  volume        = {7},
+  year          = {2002},
+  pages         = {No. 15, 61},
+  issn          = {1083-6489},
+  mrclass       = {60K35 (60G57 60J80)},
+  mrnumber      = {1921744},
+  mrreviewer    = {Achim Klenke},
+  doi           = {10.1214/EJP.v7-114},
+  url           = {https://doi.org/10.1214/EJP.v7-114}
+}
+@article{dawson.etheridge.ea:02:mutually*1,
+  author        = {Dawson, Donald A. and Etheridge, Alison M. and Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A. and Xiong, Jie},
   title         = {Mutually catalytic branching in the plane: finite measure states},
   journal       = {Ann. Probab.},
   fjournal      = {The Annals of Probability},
@@ -25399,21 +25414,6 @@
   mrreviewer    = {Roger Tribe},
   doi           = {10.1214/aop/1039548370},
   url           = {https://doi.org/10.1214/aop/1039548370}
-}
-@article{dawson.etheridge.ea:02:mutually*1,
-  author        = {Dawson, Donald A. and Etheridge, Alison M. and Fleischmann, Klaus and Mytnik, Leonid and Perkins, Edwin A. and Xiong, Jie},
-  title         = {Mutually catalytic branching in the plane: infinite measure states},
-  journal       = {Electron. J. Probab.},
-  fjournal      = {Electronic Journal of Probability},
-  volume        = {7},
-  year          = {2002},
-  pages         = {No. 15, 61},
-  issn          = {1083-6489},
-  mrclass       = {60K35 (60G57 60J80)},
-  mrnumber      = {1921744},
-  mrreviewer    = {Achim Klenke},
-  doi           = {10.1214/EJP.v7-114},
-  url           = {https://doi.org/10.1214/EJP.v7-114}
 }
 @article{dawson.feng:01:large,
   author        = {Dawson, Donald A. and Feng, Shui},
@@ -45494,7 +45494,7 @@
 }
 @article{levine:73:some,
   author        = {Levine, Howard A.},
-  title         = {Some nonexistence and instability theorems for solutions of formally parabolic equations of the form {$Pu_{t}=-Au+{\scr F}(u)$}},
+  title         = {Some nonexistence and instability theorems for solutions of formally parabolic equations of the form {$Pu_{t}=-Au+\mathscr{F}(u)$}},
   journal       = {Arch. Rational Mech. Anal.},
   fjournal      = {Archive for Rational Mechanics and Analysis},
   volume        = {51},
@@ -61998,6 +61998,21 @@
 }
 @article{talagrand:06:parisi,
   author        = {Talagrand, Michel},
+  title         = {Parisi measures},
+  journal       = {J. Funct. Anal.},
+  fjournal      = {Journal of Functional Analysis},
+  volume        = {231},
+  year          = {2006},
+  number        = {2},
+  pages         = {269--286},
+  issn          = {0022-1236},
+  mrclass       = {82B44 (28A33 82D30)},
+  mrnumber      = {2195333},
+  doi           = {10.1016/j.jfa.2005.03.001},
+  url           = {https://doi.org/10.1016/j.jfa.2005.03.001}
+}
+@article{talagrand:06:parisi*1,
+  author        = {Talagrand, Michel},
   title         = {The {P}arisi formula},
   journal       = {Ann. of Math. (2)},
   fjournal      = {Annals of Mathematics. Second Series},
@@ -62011,21 +62026,6 @@
   mrreviewer    = {Fran\c{c}ois Germinet},
   doi           = {10.4007/annals.2006.163.221},
   url           = {https://doi.org/10.4007/annals.2006.163.221}
-}
-@article{talagrand:06:parisi*1,
-  author        = {Talagrand, Michel},
-  title         = {Parisi measures},
-  journal       = {J. Funct. Anal.},
-  fjournal      = {Journal of Functional Analysis},
-  volume        = {231},
-  year          = {2006},
-  number        = {2},
-  pages         = {269--286},
-  issn          = {0022-1236},
-  mrclass       = {82B44 (28A33 82D30)},
-  mrnumber      = {2195333},
-  doi           = {10.1016/j.jfa.2005.03.001},
-  url           = {https://doi.org/10.1016/j.jfa.2005.03.001}
 }
 @article{talagrand:10:construction,
   author        = {Talagrand, Michel},
@@ -62045,20 +62045,6 @@
 }
 @book{talagrand:11:mean,
   author        = {Talagrand, Michel},
-  title         = {Mean field models for spin glasses. {V}olume {II}},
-  series        = {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3. Folge. A Series of Modern Surveys in Mathematics [Results in Mathematics and Related Areas. 3rd Series. A Series of Modern Surveys in Mathematics]},
-  volume        = {55},
-  note          = {Advanced replica-symmetry and low temperature},
-  publisher     = {Springer, Heidelberg},
-  year          = {2011},
-  pages         = {xii+629},
-  isbn          = {978-3-642-22252-8; 978-3-642-22253-5},
-  mrclass       = {60F10 (60G15 60K35 82B44 82C32 92E10)},
-  mrnumber      = {3024566},
-  mrreviewer    = {Francis Comets}
-}
-@book{talagrand:11:mean*1,
-  author        = {Talagrand, Michel},
   title         = {Mean field models for spin glasses. {V}olume {I}},
   series        = {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3. Folge. A Series of Modern Surveys in Mathematics [Results in Mathematics and Related Areas. 3rd Series. A Series of Modern Surveys in Mathematics]},
   volume        = {54},
@@ -62072,6 +62058,20 @@
   mrreviewer    = {Francis Comets},
   doi           = {10.1007/978-3-642-15202-3},
   url           = {https://doi.org/10.1007/978-3-642-15202-3}
+}
+@book{talagrand:11:mean*1,
+  author        = {Talagrand, Michel},
+  title         = {Mean field models for spin glasses. {V}olume {II}},
+  series        = {Ergebnisse der Mathematik und ihrer Grenzgebiete. 3. Folge. A Series of Modern Surveys in Mathematics [Results in Mathematics and Related Areas. 3rd Series. A Series of Modern Surveys in Mathematics]},
+  volume        = {55},
+  note          = {Advanced replica-symmetry and low temperature},
+  publisher     = {Springer, Heidelberg},
+  year          = {2011},
+  pages         = {xii+629},
+  isbn          = {978-3-642-22252-8; 978-3-642-22253-5},
+  mrclass       = {60F10 (60G15 60K35 82B44 82C32 92E10)},
+  mrnumber      = {3024566},
+  mrreviewer    = {Francis Comets}
 }
 @article{talagrand:94:sharper,
   author        = {Talagrand, M.},
@@ -67256,6 +67256,21 @@
   url           = {https://doi.org/10.1016/j.jde.2008.02.019}
 }
 @article{zhang:09:variational,
+  author        = {Zhang, Xicheng},
+  title         = {A variational representation for random functionals on abstract {W}iener spaces},
+  journal       = {J. Math. Kyoto Univ.},
+  fjournal      = {Journal of Mathematics of Kyoto University},
+  volume        = {49},
+  year          = {2009},
+  number        = {3},
+  pages         = {475--490},
+  issn          = {0023-608X},
+  mrclass       = {60H07 (60F10)},
+  mrnumber      = {2583599},
+  doi           = {10.1215/kjm/1260975036},
+  url           = {https://doi.org/10.1215/kjm/1260975036}
+}
+@article{zhang:09:variational*1,
   author        = {Zhang, Tusheng},
   title         = {Variational inequalities and optimization for {M}arkov processes associated with semi-{D}irichlet forms},
   journal       = {SIAM J. Control Optim.},
@@ -67270,21 +67285,6 @@
   mrreviewer    = {Arie Leizarowitz},
   doi           = {10.1137/080737630},
   url           = {https://doi.org/10.1137/080737630}
-}
-@article{zhang:09:variational*1,
-  author        = {Zhang, Xicheng},
-  title         = {A variational representation for random functionals on abstract {W}iener spaces},
-  journal       = {J. Math. Kyoto Univ.},
-  fjournal      = {Journal of Mathematics of Kyoto University},
-  volume        = {49},
-  year          = {2009},
-  number        = {3},
-  pages         = {475--490},
-  issn          = {0023-608X},
-  mrclass       = {60H07 (60F10)},
-  mrnumber      = {2583599},
-  doi           = {10.1215/kjm/1260975036},
-  url           = {https://doi.org/10.1215/kjm/1260975036}
 }
 @article{zhang:10:stochastic,
   author        = {Zhang, Xicheng},
