--- a/All.tex
+++ b/All.tex
@@ -2,10 +2,10 @@
 \usepackage[margin=1in]{geometry}
 \RequirePackage[colorlinks,citecolor=blue,urlcolor=blue]{hyperref}
 \usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
+\usepackage{lmodern}
 \usepackage{amsmath,amssymb,amsthm,mathrsfs}
 \usepackage[utf8]{inputenc}
-\usepackage{babel}
+\usepackage[russian, german, french, polish, english]{babel}
 \usepackage{url,graphicx}
 \usepackage[strict=true,style=english]{csquotes}
 % \usepackage[backend=biber, style=authoryear]{biblatex}
@@ -34,12 +34,12 @@
 \begin{document}
 
 \maketitle
+\begin{center}
+  \includegraphics[scale=0.50]{Statistics.png}
+\end{center}
 \tableofcontents
 \vfill
 
-\begin{center}
-  \includegraphics[scale=0.55]{Statistics.png}
-\end{center}
 
 \newpage
 
